--- a/portfolio.html
+++ b/portfolio.html
@@ -8,43 +8,40 @@
   <title lang="en">WebStudio - Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./css/main.min.css">
-  <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 
 <!--Body of HTML-->
 
 <body>
+
   <!--Top parts: logo, navigation and so on -->
   <header class="header">
-    <div class="container header__conteiner">
+    <div class="header__container">
       <!--Navigation panel-->
       <nav class="header__nav-panel">
         <!--Logo text and link-->
         <a class="logo" href=./index.html lang="en">Web<span class="logo__text">Studio</span></a>
 
         <!--Site naviagation list-->
-        <ul class="site-nav list">
+        <ul class="site-nav">
           <li class="site-nav__item">
-            <a class="site-nav__link link" href="./index.html">Студия</a>
+            <a class="site-nav__link" href="./index.html">Студия</a>
           </li>
           <li class="site-nav__item">
-            <a class="site-nav__link link site-nav__link--current" href="./portfolio.html">Портфолио</a>
+            <a class="site-nav__link site-nav__link--current" href="./portfolio.html">Портфолио</a>
           </li>
           <li class="site-nav__item">
-            <a class="site-nav__link link" href="">Контакты</a>
+            <a class="site-nav__link" href="">Контакты</a>
           </li>
         </ul>
       </nav>
 
-      <ul class="header-contact list">
+      <ul class="header-contact">
         <li>
           <!--Contact e-mail-->
-          <a class="link header-contact__link" href="mailto:info@devstudio.com">
+          <a class="header-contact__link" href="mailto:info@devstudio.com">
             <svg class="header-contact__icon" width="16" height="12">
               <use href="./images/icons/sprit-icons.svg#e-mail"></use>
             </svg>
@@ -53,7 +50,7 @@
         </li>
         <li>
           <!--Contact mob. tel.-->
-          <a class="link header-contact__link" href="tel:+380961111111">
+          <a class="header-contact__link" href="tel:+380961111111">
             <svg class="header-contact__icon" width="10" height="16">
               <use href="./images/icons/sprit-icons.svg#mobile"></use>
             </svg>
@@ -67,12 +64,12 @@
   <!--Portfolio parts-->
   <main>
     <!--Portfolio list section-->
-    <section class="section portfolio">
+    <section class="portfolio">
 
-      <div class="container">
+      <div class="portfolio__container">
         <h1 class="visually-hidden">Основные работы: список сайтов</h1>
         <!-- Sort buttons-->
-        <ul class="list filter">
+        <ul class="filter">
           <li><button class="filter__button filter__button--active" type="button">Все</button></li>
           <li><button class="filter__button" type="button">Веб-сайты</button></li>
           <li><button class="filter__button" type="button">Приложения</button></li>
@@ -81,10 +78,9 @@
         </ul>
 
         <!-- Importance portfolio projects -->
-        <ul class="portfolio-prj list card-set">
+        <ul class="portfolio-prj card-set">
           <li class="card-item">
-            <a class="portfolio-prj__link link" href="https://www.google.com/" target="_blank"
-              rel="noreferrer noopener">
+            <a class="portfolio-prj__link" href="https://www.google.com/" target="_blank" rel="noreferrer noopener">
               <div class="portfolio-prj__thumb">
                 <img src="./images/portfolio-projects/portfolio-img1.jpg" alt="Вид страницы Технокряк" width="370"
                   height="294">
@@ -97,13 +93,12 @@
               </div>
               <div class="portfolio-prj__text">
                 <h2 class="portfolio-prj__title">Технокряк</h2>
-                <p class="portfolio-prg__direction">Веб-сайт</p>
+                <p class="portfolio-prj__direction">Веб-сайт</p>
               </div>
             </a>
           </li>
           <li class="card-item">
-            <a class="portfolio-prj__link link" href="https://www.google.com/" target="_blank"
-              rel="noreferrer noopener">
+            <a class="portfolio-prj__link" href="https://www.google.com/" target="_blank" rel="noreferrer noopener">
               <div class="portfolio-prj__thumb">
                 <img src="./images/portfolio-projects/portfolio-img2.jpg" alt="Вид постера New Orlean vs Golden Star"
                   width="370" height="294">
@@ -121,8 +116,7 @@
             </a>
           </li>
           <li class="card-item">
-            <a class="portfolio-prj__link link" href="https://www.google.com/" target="_blank"
-              rel="noreferrer noopener">
+            <a class="portfolio-prj__link" href="https://www.google.com/" target="_blank" rel="noreferrer noopener">
               <div class="portfolio-prj__thumb">
                 <img src="./images/portfolio-projects/portfolio-img3.jpg" alt="Приложение ресторана Seafood" width="370"
                   height="294">
@@ -140,8 +134,7 @@
             </a>
           </li>
           <li class="card-item">
-            <a class="portfolio-prj__link link" href="https://www.google.com/" target="_blank"
-              rel="noreferrer noopener">
+            <a class="portfolio-prj__link" href="https://www.google.com/" target="_blank" rel="noreferrer noopener">
               <div class="portfolio-prj__thumb">
                 <img src="./images/portfolio-projects/portfolio-img4.jpg" alt="Иконка проекта Prime" width="370"
                   height="294">
@@ -159,8 +152,7 @@
             </a>
           </li>
           <li class="card-item">
-            <a class="portfolio-prj__link link" href="https://www.google.com/" target="_blank"
-              rel="noreferrer noopener">
+            <a class="portfolio-prj__link" href="https://www.google.com/" target="_blank" rel="noreferrer noopener">
               <div class="portfolio-prj__thumb">
                 <img src="./images/portfolio-projects/portfolio-img5.jpg" alt="Приложение Boxes" width="370"
                   height="294">
@@ -178,8 +170,7 @@
             </a>
           </li>
           <li class="card-item">
-            <a class="portfolio-prj__link link" href="https://www.google.com/" target="_blank"
-              rel="noreferrer noopener">
+            <a class="portfolio-prj__link" href="https://www.google.com/" target="_blank" rel="noreferrer noopener">
               <div class="portfolio-prj__thumb">
                 <img src="./images/portfolio-projects/portfolio-img6.jpg" alt="Вид страницы Inspiration has no Borders"
                   width="370" height="294">
@@ -197,8 +188,7 @@
             </a>
           </li>
           <li class="card-item">
-            <a class="portfolio-prj__link link" href="https://www.google.com/" target="_blank"
-              rel="noreferrer noopener">
+            <a class="portfolio-prj__link" href="https://www.google.com/" target="_blank" rel="noreferrer noopener">
               <div class="portfolio-prj__thumb">
                 <img src="./images/portfolio-projects/portfolio-img7.jpg" alt="Вид журнала Limited Edition" width="370"
                   height="294">
@@ -216,8 +206,7 @@
             </a>
           </li>
           <li class="card-item">
-            <a class="portfolio-prj__link link" href="https://www.google.com/" target="_blank"
-              rel="noreferrer noopener">
+            <a class="portfolio-prj__link" href="https://www.google.com/" target="_blank" rel="noreferrer noopener">
               <div class="portfolio-prj__thumb">
                 <img src="./images/portfolio-projects/portfolio-img8.jpg" alt="Иконка проекта LAB" width="370"
                   height="294">
@@ -235,8 +224,7 @@
             </a>
           </li>
           <li class="card-item">
-            <a class="portfolio-prj__link link" href="https://www.google.com/" target="_blank"
-              rel="noreferrer noopener">
+            <a class="portfolio-prj__link" href="https://www.google.com/" target="_blank" rel="noreferrer noopener">
               <div class="portfolio-prj__thumb">
                 <img src="./images/portfolio-projects/portfolio-img9.jpg" alt="Вид приложения Growing Business"
                   width="370" height="294">
@@ -260,27 +248,28 @@
 
   <!--Footer part-->
   <footer class="footer">
-    <div class="container">
-      <div class="footer-divide">
-        <ul class="list footer-list">
+    <div class="footer__container">
+      <div class="footer__divide">
+        <ul class="footer__list">
           <!-- Left part of footer contacts -->
           <li>
             <!--Logo text and link-->
             <a class="logo logo__footer" href=./index.html lang="en">Web<span
-                class="logo__foooter--color">Studio</span></a>
+                class="logo__footer--color">Studio</span></a>
             <!--Address and develotment contacts-->
             <address class="footer-contact">
-              <ul class="list footer-contact__data">
+              <ul class="footer-contact__data">
                 <li class="footer-contact__item">
-                  <a class="footer-contact__link link" href="https://goo.gl/maps/GUnd78wBxHpprMvDA" target="_blank"
+                  <a class="footer-contact__link" href="https://goo.gl/maps/GUnd78wBxHpprMvDA" target="_blank"
                     rel="noreferrer noopener">г. Киев, пр-т Леси Украинки,
                     26</a>
                 </li>
                 <li class="footer-contact__item">
-                  <a class="footer-contact__link--color link" href="mailto:info@example.com">info@example.com</a>
+                  <a class="footer-contact__link--color" href="mailto:info@example.com">info@example.com</a>
                 </li>
                 <li class="footer-contact__item">
-                  <a class="footer-contact__link--color link" href="tel:+380991111111">+38 099 111 11 11</a>
+                  <a class="footer-contact__link--color" href="tel:+380991111111">+38 099 111 11
+                    11</a>
                 </li>
               </ul>
             </address>
@@ -288,34 +277,34 @@
           <!-- Right part of footer contacts-->
           <li class="footer-conection">
             <p class="footer-conection__text">Присоединяйтесь</p>
-            <ul class="list social-network">
+            <ul class="social-network">
               <li class="social-network__item">
-                <a class="footer-network__link social-network__link link" href="" target="_blank"
-                  rel="noreferrer noopener" aria-label="Инстаграм">
+                <a class="footer-network__link social-network__link" href="" target="_blank" rel="noreferrer noopener"
+                  aria-label="Инстаграм">
                   <svg class="footer-network__icon" width="20" height="20">
                     <use href="./images/icons/sprit-icons.svg#instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-network__item">
-                <a class="footer-network__link social-network__link link" href="" target="_blank"
-                  rel="noreferrer noopener" aria-label="Твитер">
+                <a class="footer-network__link social-network__link" href="" target="_blank" rel="noreferrer noopener"
+                  aria-label="Твитер">
                   <svg class="footer-network__icon" width="20" height="20">
                     <use href="./images/icons/sprit-icons.svg#twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-network__item">
-                <a class="footer-network__link social-network__link link" href="" target="_blank"
-                  rel="noreferrer noopener" aria-label="Фасебук">
+                <a class="footer-network__link social-network__link" href="" target="_blank" rel="noreferrer noopener"
+                  aria-label="Фасебук">
                   <svg class="footer-network__icon" width="20" height="20">
                     <use href="./images/icons/sprit-icons.svg#facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-network__item">
-                <a class="footer-network__link social-network__link link" href="" target="_blank"
-                  rel="noreferrer noopener" aria-label="ЛинкедИн">
+                <a class="footer-network__link social-network__link" href="" target="_blank" rel="noreferrer noopener"
+                  aria-label="ЛинкедИн">
                   <svg class="footer-network__icon" width="20" height="20">
                     <use href="./images/icons/sprit-icons.svg#linkedin"></use>
                   </svg>
@@ -338,12 +327,9 @@
               </svg>
             </button>
           </form>
-
         </div>
       </div>
-
     </div>
-
   </footer>
 
 </body>
