Full final ver HM #7

--- a/index.html
+++ b/index.html
@@ -417,8 +417,8 @@
                     <!-- Left part of footer contacts -->
                     <li>
                         <!--Logo text and link-->
-                        <a class="logo logo__footer" href=./index.html lang="en">Web<span
-                                class="logo__footer--color">Studio</span></a>
+                        <a class="logo logo--location" href=./index.html lang="en">Web<span
+                                class="logo-text logo__text--color">Studio</span></a>
                         <!--Address and develotment contacts-->
                         <address class="footer-contact">
                             <ul class="footer-contact__data">
@@ -428,11 +428,12 @@
                                         26</a>
                                 </li>
                                 <li class="footer-contact__item">
-                                    <a class="footer-contact__link--color"
+                                    <a class="footer-contact__link footer-contact__link--color"
                                         href="mailto:info@example.com">info@example.com</a>
                                 </li>
                                 <li class="footer-contact__item">
-                                    <a class="footer-contact__link--color" href="tel:+380991111111">+38 099 111 11
+                                    <a class="footer-contact__link footer-contact__link--color"
+                                        href="tel:+380991111111">+38 099 111 11
                                         11</a>
                                 </li>
                             </ul>
@@ -443,33 +444,37 @@
                         <p class="footer-conection__text">Присоединяйтесь</p>
                         <ul class="social-network">
                             <li class="social-network__item">
-                                <a class="footer-network__link social-network__link" href="" target="_blank"
+                                <a class="social-network__link social-network__link--color" href="" target="_blank"
                                     rel="noreferrer noopener" aria-label="Инстаграм">
-                                    <svg class="footer-network__icon" width="20" height="20">
+                                    <svg class="social-network__icon social-network__icon--color" width="20"
+                                        height="20">
                                         <use href="./images/icons/sprit-icons.svg#instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-network__item">
-                                <a class="footer-network__link social-network__link" href="" target="_blank"
+                                <a class="social-network__link social-network__link--color" href="" target="_blank"
                                     rel="noreferrer noopener" aria-label="Твитер">
-                                    <svg class="footer-network__icon" width="20" height="20">
+                                    <svg class="social-network__icon social-network__icon--color" width="20"
+                                        height="20">
                                         <use href="./images/icons/sprit-icons.svg#twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-network__item">
-                                <a class="footer-network__link social-network__link" href="" target="_blank"
+                                <a class="social-network__link social-network__link--color" href="" target="_blank"
                                     rel="noreferrer noopener" aria-label="Фасебук">
-                                    <svg class="footer-network__icon" width="20" height="20">
+                                    <svg class="social-network__icon social-network__icon--color" width="20"
+                                        height="20">
                                         <use href="./images/icons/sprit-icons.svg#facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-network__item">
-                                <a class="footer-network__link social-network__link" href="" target="_blank"
+                                <a class="social-network__link social-network__link--color" href="" target="_blank"
                                     rel="noreferrer noopener" aria-label="ЛинкедИн">
-                                    <svg class="footer-network__icon" width="20" height="20">
+                                    <svg class="social-network__icon social-network__icon--color" width="20"
+                                        height="20">
                                         <use href="./images/icons/sprit-icons.svg#linkedin"></use>
                                     </svg>
                                 </a>
@@ -486,7 +491,7 @@
                         </label>
                         <button class="button" type="submit">
                             Подписаться
-                            <svg class="button__icon--color" width="24" height="24">
+                            <svg class="button__icon" width="24" height="24">
                                 <use href="./images/icons/sprit-icons.svg#send"></use>
                             </svg>
                         </button>
@@ -563,7 +568,7 @@
                         </span>
 
                     </label>
-                    <label class="feedback-form__label-textarea">
+                    <label class="feedback-form__social-network__icon social-network__icon--colorlabel-textarea">
                         <span class="feedback-form__id-data">Комментарий</span>
                         <textarea class="feedback-form__comment" placeholder="Введите текст"
                             name="feedback-form__comment"></textarea>
@@ -573,8 +578,10 @@
                 <label class="checkbox">
                     <input class="checkbox__input visually-hidden" type="checkbox" name="feedback-agreement-option" />
                     <svg class="checkbox__icon" width="16" height="15">
-                        <use class="checkbox__icon--unchecked" href="./images/icons/sprit-icons.svg#no-agree"></use>
-                        <use class="checkbox__icon--checked" href="./images/icons/sprit-icons.svg#agree"></use>
+                        <use class="checkbox__icon checkbox__icon--unchecked"
+                            href="./images/icons/sprit-icons.svg#no-agree"></use>
+                        <use class="checkbox__icon checkbox__icon--checked" href="./images/icons/sprit-icons.svg#agree">
+                        </use>
                     </svg>
                     <span class="checkbox__disc">Соглашаюсь с рассылкой и принимаю
                         <a class="checkbox__disc-link" href="" target="_blank" rel="noreferrer noopener"
