--- a/portfolio.html
+++ b/portfolio.html
@@ -254,8 +254,8 @@
           <!-- Left part of footer contacts -->
           <li>
             <!--Logo text and link-->
-            <a class="logo logo__footer" href=./index.html lang="en">Web<span
-                class="logo__footer--color">Studio</span></a>
+            <a class="logo logo--location" href=./index.html lang="en">Web<span
+                class="logo__text--color">Studio</span></a>
             <!--Address and develotment contacts-->
             <address class="footer-contact">
               <ul class="footer-contact__data">
@@ -265,10 +265,11 @@
                     26</a>
                 </li>
                 <li class="footer-contact__item">
-                  <a class="footer-contact__link--color" href="mailto:info@example.com">info@example.com</a>
+                  <a class="footer-contact__link footer-contact__link--color"
+                    href="mailto:info@example.com">info@example.com</a>
                 </li>
                 <li class="footer-contact__item">
-                  <a class="footer-contact__link--color" href="tel:+380991111111">+38 099 111 11
+                  <a class="footer-contact__link footer-contact__link--color" href="tel:+380991111111">+38 099 111 11
                     11</a>
                 </li>
               </ul>
@@ -279,33 +280,33 @@
             <p class="footer-conection__text">Присоединяйтесь</p>
             <ul class="social-network">
               <li class="social-network__item">
-                <a class="footer-network__link social-network__link" href="" target="_blank" rel="noreferrer noopener"
-                  aria-label="Инстаграм">
-                  <svg class="footer-network__icon" width="20" height="20">
+                <a class="social-network__link social-network__link--color" href="" target="_blank"
+                  rel="noreferrer noopener" aria-label="Инстаграм">
+                  <svg class="social-network__icon social-network__icon--color" width="20" height="20">
                     <use href="./images/icons/sprit-icons.svg#instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-network__item">
-                <a class="footer-network__link social-network__link" href="" target="_blank" rel="noreferrer noopener"
-                  aria-label="Твитер">
-                  <svg class="footer-network__icon" width="20" height="20">
+                <a class="social-network__link social-network__link--color" href="" target="_blank"
+                  rel="noreferrer noopener" aria-label="Твитер">
+                  <svg class="social-network__icon social-network__icon--color" width="20" height="20">
                     <use href="./images/icons/sprit-icons.svg#twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-network__item">
-                <a class="footer-network__link social-network__link" href="" target="_blank" rel="noreferrer noopener"
-                  aria-label="Фасебук">
-                  <svg class="footer-network__icon" width="20" height="20">
+                <a class="social-network__link social-network__link--color" href="" target="_blank"
+                  rel="noreferrer noopener" aria-label="Фасебук">
+                  <svg class="social-network__icon social-network__icon--color" width="20" height="20">
                     <use href="./images/icons/sprit-icons.svg#facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-network__item">
-                <a class="footer-network__link social-network__link" href="" target="_blank" rel="noreferrer noopener"
-                  aria-label="ЛинкедИн">
-                  <svg class="footer-network__icon" width="20" height="20">
+                <a class="social-network__link social-network__link--color" href="" target="_blank"
+                  rel="noreferrer noopener" aria-label="ЛинкедИн">
+                  <svg class="social-network__icon social-network__icon--color" width="20" height="20">
                     <use href="./images/icons/sprit-icons.svg#linkedin"></use>
                   </svg>
                 </a>
@@ -322,7 +323,7 @@
             </label>
             <button class="button" type="submit">
               Подписаться
-              <svg class="button__icon--color" width="24" height="24">
+              <svg class="button__icon" width="24" height="24">
                 <use href="./images/icons/sprit-icons.svg#send"></use>
               </svg>
             </button>
